--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,27 +1,27 @@
 ---
 # Delete previous list first
-- name: docker_container guac - guac_connection_list_delete_previous {{ guac_connection_sql_file_prefix }}
-  shell: |
-    source ./.env
-    if [ -f "generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql" ]; then /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DATABASE < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql';fi
-  args:
-    chdir: '{{ docker_container_guac_volume_dir }}'
-    executable: /bin/bash
-  register: docker_container_guac_connection_delete_result
-  tags:
-    - always
+#- name: docker_container guac - guac_connection_list_delete_previous {{ guac_connection_sql_file_prefix }}
+#  shell: |
+#    source ./.env
+#    if [ -f "generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql" ]; then /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DATABASE < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql';fi
+#  args:
+#    chdir: '{{ docker_container_guac_volume_dir }}'
+#    executable: /bin/bash
+#  register: docker_container_guac_connection_delete_result
+#  tags:
+#    - always
 
-- debug:
-    var: docker_container_guac_connection_delete_result
-  tags: [never,debug]
+#- debug:
+#    var: docker_container_guac_connection_delete_result
+#  tags: [never,debug]
 
 # Generate delete list
-- name: docker_container guac - guac_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql
-  template:
-    src: templates/docker_container/guac/connection_list_delete_for.sql.j2
-    dest: "{{ docker_container_guac_volume_dir }}/generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql"
-  tags:
-    - always
+#- name: docker_container guac - guac_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql
+#  template:
+#    src: templates/docker_container/guac/connection_list_delete_for.sql.j2
+#    dest: "{{ docker_container_guac_volume_dir }}/generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql"
+#  tags:
+#    - always
 
 # Generate add list
 - name: docker_container guac - guac_connection_list_add_for_{{ guac_connection_sql_file_prefix }}.sql
