--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,9 +24,9 @@
     - always
 
 # Generate test list
-- name: docker_container guac - guac_connection_test.sql
+- name: docker_container guac - connection_test.sql
   template:
-    src: templates/docker_container/guac/guac_connection_test.sql.j2
+    src: templates/docker_container/guac/connection_test.sql.j2
     dest: "{{ docker_container_guac_volume_dir }}/connection_list_test.sql"
   tags:
     - always
