--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # Delete previous list first
-- name: docker_container guac - guac_connection_list_delete_previous {{ guac_connection_sql_file_prefix }}
+- name: Delete previous list {{ guac_connection_sql_file_prefix }}
   shell: |
     source ./.env
     if [ -f "generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql" ]; then /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u${{ guac_db_user }} -p${{ guac_db_password }} ${{ guac_db_name }} < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql';fi
@@ -16,7 +16,7 @@
   tags: [never,debug]
 
 # Generate delete list
-- name: docker_container guac - guac_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql
+- name: Generate delete list - guac_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql
   template:
     src: templates/docker_container/guac/connection_list_delete_for.sql.j2
     dest: "{{ docker_container_guac_volume_dir }}/generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql"
@@ -24,9 +24,17 @@
     - always
 
 # Generate test list
-- name: docker_container guac - connection_test.sql
+- name: Generate test list - connection_test.sql
   template:
     src: templates/docker_container/guac/connection_test.sql.j2
     dest: "{{ docker_container_guac_volume_dir }}/connection_list_test.sql"
+  tags:
+    - always
+
+# Generate add list
+- name: Generate add list - guac_connection_list_add_for_{{ guac_connection_sql_file_prefix }}.sql
+  template:
+    src: templates/docker_container/guac/connection_list_add_for.sql.j2
+    dest: "{{ docker_container_guac_volume_dir }}/generated_connection_list_add_for_{{ guac_connection_sql_file_prefix }}.sql"
   tags:
     - always
