--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Delete previous list {{ guac_connection_sql_file_prefix }}
   shell: |
     source ./.env
-    if [ -f "generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql" ]; then /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u${{ guac_db_user }} -p${{ guac_db_password }} ${{ guac_db_name }} < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql';fi
+    if [ -f "generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql" ]; then /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u{{ guac_db_user }} -p{{ guac_db_password }} {{ guac_db_name }} < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql';fi
   args:
     chdir: '{{ docker_container_guac_volume_dir }}'
     executable: /bin/bash
