--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,3 +38,20 @@
     dest: "{{ docker_container_guac_volume_dir }}/generated_connection_list_add_for_{{ guac_connection_sql_file_prefix }}.sql"
   tags:
     - always
+
+# Re-Add new list
+- name: docker_container guac - guac_connection_list_import {{ guac_connection_sql_file_prefix }}
+  shell: |
+    # source ./.env    
+    # /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u {{ guac_db_user }} -p {{ guac_db_password }} {{ guac_db_name }} < 'generated_connection_list_delete_for_{{ guac_connection_sql_file_prefix }}.sql'
+    /usr/bin/docker exec -i {{ docker_container_guac_db_name }} mysql -u {{ guac_db_user }} -p {{ guac_db_password }} {{ guac_db_name }} < 'generated_connection_list_add_for_{{ guac_connection_sql_file_prefix }}.sql'
+  args:
+    chdir: '{{ docker_container_guac_volume_dir }}'
+    executable: /bin/bash
+  register: docker_container_guac_connection_import_result
+  tags:
+    - always#
+
+- debug:
+    var: docker_container_guac_connection_import_result
+  tags: [never,debug]
