--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,12 @@
   tags:
     - always
 
+- name: Make sure pymysql is present
+  become: true # needed if the other tasks are not played as root
+  pip:
+    name: pymysql
+    state: present
+
 - name: Simple select query to acme db
   community.mysql.mysql_query:
     login_db: guacamole
